# storyteller

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  config.json  err.txt  flake.nix  lib.rs  morning_before_pride.md  oidc.go  rocket.toml  rustc-ice-2025-04-18T17_24_36-31424.txt  secret  set_env.sh  test.dot  todo.md
api/: README.md  config.go  genmodel.sh  go.mod  go.sum  licenses.json  main.go  router.go  setup.sh  test.sh
api/auth/: auth.go
api/config/: config.go
api/dao/: characterrel.gen.go  characters.gen.go  datasets.gen.go  edits.gen.go  entities.gen.go  exif_tags.gen.go  fragments.gen.go  gen.go  graphs.gen.go  grouprel.gen.go  groups.gen.go  images.gen.go  licenses.gen.go  locations.gen.go  metadata.gen.go  moments.gen.go  notes.gen.go  recordings.gen.go  tags.gen.go  (+5 more)
constructify/: Cargo.toml
docs/: book.toml
images/: 02becff8-d632-4959-81ce-75772392402c  0f71f7f7-95c7-4de3-9948-3e765b1f0e57  1021e3fb-3068-4bde-9ba0-1e7f295f97a6  1d5d3a6c-b6d8-4ac8-8fbb-58127b3d9574  2f370f48-ff82-43b3-9172-dbaa28dde9e5  2f5c4121-6927-4c61-bc25-d463204883b5  38bcae93-be3f-4f35-9de2-8edcca9b0929  3fe4a68e-86e9-4265-906b-d451278c8fe3  42bbd543-91c6-44f6-9269-c65388e27ae0  4f8be7e1-a92a-45e8-bd0c-d65402ee5662  500c6042-8f4d-4a24-9630-e22b74a40afa  62383702-2821-477a-8450-0c769331db7c  724df512-09eb-4187-91f4-a3e6e1bd68d8  90d9d190-c363-45cd-91fc-b89815ace533  96036305-8fd3-4956-8704-1a83a23f52da  a2b55301-7499-48eb-bb54-3f32b7e8e9af  ab3f213c-1869-4467-8c75-30480ee61176  b1331e81-4cc2-48b3-be2b-4a120e8e8ea0  c142895a-3c86-4e97-bee2-76151da73e1e  c55e8631-1dcc-4e4e-ad10-d81e6aa2a611  c65d30db-01b9-43ef-a598-c6278ffb954b  ea717a78-c82b-43cd-ae71-9bca6d387c60  ec9a3674-66b1-4e67-836e-86c3eea8bc79
integrations/: Cargo.toml  README.md
integrations/src/: data.rs  error.rs  lib.rs  loader.rs  main.rs
keys/: jwt.key  jwt.pub
records.db/: db  snap.000000000000E5AC
relgraph/: Cargo.toml
scripts/: backup_schema.sh  bcrypt_hash.sh  genkeys.sh  set_env.sh
sql/: add_trigger.sql  autoinsert.sql  constraints.sql  drop.sql  expanded.sql  fragmentrel.sql  groupsize.sql  migrate_entity_ids.sql  rels.sql  schema.sql
src/: api.rs  auth.rs  characters.rs  communities.rs  config.rs  error.rs  errors.rs  fragments.rs  groups.rs  image.rs  images.rs  inspiration.rs  lib.rs  links.rs  loader.rs  main.rs  model.rs  notes.rs  organizations.rs  places.rs  projects.rs  relations.rs  resources.rs  schema.rs  search.rs  stories.rs  tasks.rs  tests.rs  themes.rs  users.rs
static/: desktop.css  header.css  main.css  mobile.css  scripts.js
stores.db/: db  snap.0000000000188D31
storyvault/: Cargo.toml  README.md
templates/: head.tera  header.tera  index.tera  notfound.tera  profile.tera  project.tera  projects.tera  resources.tera  stories.tera  story.tera
xmp_codec/: Cargo.toml
(+157 files in other folders)
