[package]
name = "storyteller"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"]}
comrak = "0.37.0"
pdfium-render = "0.8.29"
rmp-serde = "1.3.0"
rocket = { version = "0.5.1", features = ["uuid", "json"]}
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sled = { version = "0.34.7" }
tera = "1.20.0"
tokio = { version = "*", features = ["full"]}
uuid = { version = "1.16.0", features = ["v4", "serde", "v7"]}
walkdir = "2.5.0"
rocket-oidc = "0.1.3"
ron = "0.10.1"
rayon = "1.10.0"
redis = { version = "0.31.0", optional = true }
err-derive = "0.3.1"
rustls = "0.23.27"
rustls-platform-verifier = "0.5.3"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1.0.98"
url = "2.5.4"
structopt = "0.3.26"
image = "0.25.6"
nom-exif = "2.5.1"
time = { version = "0.3.41", features = ["local-offset"]}
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
petgraph = "0.8.2"
wrappedviz = "0.2.0"
regex = "1.11.1"
ubyte = "0.10.4"
lofty = "0.22.4"
chrono = "0.4.41"
dashmap = "6.1.0"
urlencoding = "2.1.3"
ormlite = { version = "0.24.1", features = ["postgres", "uuid"]}
protocol = { path = "./protocol" }

[features]
redis = ["dep:redis"]
default = [ "redis" ]
experimental = []
