[package]
name = "integrations"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
daemonize = "0.5.0"
err-derive = "0.3.1"
http = "1.3.1"
serde = "1.0.219"
serde_derive = "1.0.219"
structopt = "0.3.26"
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde"]}
wasi-http = "0.0.0"
wasmtime = "34.0.0"
wasmtime-wasi = "34.0.0"
wasmtime-wasi-http = "34.0.0"
